Fixed borders not collapsing properly

--- a/react-starter-master/src/components/JobListing/style.css
+++ b/react-starter-master/src/components/JobListing/style.css
@@ -43,6 +43,7 @@
   margin-top: 20px;
   width: 100%;
   border: 2px solid var(--green);
+  border-collapse: collapse;
 }
 .job-listing-table tr {
   padding: 10px;
